lab4/local/source/policy/privileged/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: privileged
spec:
  crd:
    spec:
      names:
        kind: Privileged
  targets:
  - code:
    - engine: Rego
      source:
        version: v1
        rego: |-
          package privileged_check
    
    
          violation contains {"msg": msg, "details": {}} if {
              c := input_containers[_]
              c.securityContext.privileged == true
              msg := sprintf("Privileged container is not allowed: %v, securityContext: %v", [c.name, c.securityContext])
          }
          input_containers contains c if {
              c := input.review.object.spec.containers[_]
          }
          input_containers contains c if {
              c := input.review.object.spec.initContainers[_]
          }
          input_containers contains c if {
              c := input.review.object.spec.ephemeralContainers[_]
          }
    target: admission.k8s.gatekeeper.sh
status: {}
